@@ -1,3 +1,6 @@
+2006-12-14  Jean-Louis Martineau <martineau@zmanda.com>
+	* restore-src/restore.c: Fix filename for output file.
+
 2006-12-12  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/util.c: Fix printf format error.
 
